# calm-chimp

./: .gitignore  README.md  pyproject.toml
data/: tasks.json
docs/: mcp_prompt_catalog.txt
scripts/: package_macos.sh
src/calm_chimp/: __init__.py  cli.py  logging.py  settings.py
src/calm_chimp/agents/: __init__.py  planner.py
src/calm_chimp/api/: __init__.py  calendar.py  calendar_tools.py  endpoints.py  history.py  meta.py  models.py  planning.py  registry.py  serializers.py  state.py  subjects.py  tasks.py
src/calm_chimp/assets/: __init__.py
src/calm_chimp/assets/branding/: __init__.py
src/calm_chimp/bootstrap/: __init__.py  logging.py
src/calm_chimp/config/: __init__.py  settings.py  theme.py
src/calm_chimp/core/: __init__.py  calendar_store.py  config.py  database.py  models.py  scheduler.py  supabase_client.py
src/calm_chimp/data/: __init__.py  supabase.py
src/calm_chimp/data/cache/: __init__.py  timeline_cache.py
src/calm_chimp/data/repositories/: __init__.py  categories.py  events.py  profiles.py
src/calm_chimp/domain/: __init__.py  enums.py  models.py
src/calm_chimp/llm/: __init__.py  orchestrator.py
src/calm_chimp/orchestrator/: __init__.py  chat.py  langgraph.py  prompts.py  verifiers.py
src/calm_chimp/services/: __init__.py  auth.py  calendar.py  categories.py  context.py  http.py  mcp.py
src/calm_chimp/services/http/: __init__.py  server.py
src/calm_chimp/services/mcp/: __init__.py  server.py
src/calm_chimp/ui/: __init__.py  app.py  auth_dialog.py  gui.py  login.py  main_window.py
src/calm_chimp/ui/components/: calendar_panel.py  category_dialog.py  chat_panel.py  event_dialog.py  sidebar.py
src/calm_chimp/ui/styles/: theme.py
src/calm_chimp/utils/: qt.py
src/data/: tasks.json
